--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
+    "babel": "^6.23.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
@@ -65,6 +66,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.7",
+    "babel-loader": "^9.1.0",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.2.4"
