--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-icons": "^4.6.0",
     "react-image-webp": "^0.8.0",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.8.8"
-    ,
+    "react-scroll": "^1.8.8",
     "react-toggle-dark-mode": "^1.1.1",
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.5",
@@ -66,6 +65,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.7",
+    "babel-cli": "^6.26.0",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.2.4"
