--- a/package.json
+++ b/package.json
@@ -66,8 +66,14 @@
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.7",
     "babel-cli": "^6.26.0",
+    "css-loader": "^6.7.2",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.1.0",
-    "tailwindcss": "^3.2.4"
+    "style-loader": "^3.3.1",
+    "svg-url-loader": "^8.0.0",
+    "tailwindcss": "^3.2.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   }
 }
