--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start": "react-scripts start",
     "dev": "run-p watch:tailwind start",
     "prebuild": "npm run build:tailwind",
-    "build": "webpack",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
