--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "build:tailwind": "postcss src/tailwind.css -o src/main.css",
     "watch:tailwind": "postcss -w src/tailwind.css -o src/main.css",
     "watch-css": "less-watch-compiler src/ ./",
-    "start": "react-scripts start",
+    "start": "webpack serve --open",
+    "server": "node server.js",
     "dev": "run-p watch:tailwind start",
     "prebuild": "npm run build:tailwind",
-    "build": "react-scripts build",
+    "build": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -67,12 +68,15 @@
     "autoprefixer": "^10.4.7",
     "babel-cli": "^6.26.0",
     "css-loader": "^6.7.2",
+    "express": "^4.18.2",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.1.0",
     "style-loader": "^3.3.1",
     "svg-url-loader": "^8.0.0",
     "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-middleware": "^6.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
