--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.4.4",
+    "use-sound": "^4.0.1",
     "web-vitals": "^3.1.0"
   },
   "scripts": {
