--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logoAW.webp",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/webp"
     },
     {
-      "src": "logoAW.png",
-      "type": "imagse/png",
+      "src": "logoAW.webp",
+      "type": "image/webp",
       "sizes": "192x192"
     },
     {
-      "src": "logoAW.png",
-      "type": "image/png",
+      "src": "logoAW.webp",
+      "type": "image/webp",
       "sizes": "512x512"
     }
   ],
