--- a/public/project.json
+++ b/public/project.json
@@ -39,6 +39,17 @@
                 "TypeScript"
             ],
             "link": "https://github.com/wibawasuyadnya/Portfolio-Angular"
+        },
+        {
+            "id": "5",
+            "title": "Noteapp",
+            "desc": "CRUD Note Webapp with Filter search and animation",
+            "stack": [
+                "Angular",
+                "Tailwindcss",
+                "TypeScript"
+            ],
+            "link": "https://github.com/wibawasuyadnya/noteapp"
         }
     ]
 }
