--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-image-webp": "^0.8.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.8",
     "react-toggle-dark-mode": "^1.1.1",
